syntax = "proto3";

package tokenization;

option go_package = "github.com/rhaloubi/payment-gateway/tokenization-service/proto";

// TokenizationService provides secure card tokenization
service TokenizationService {
  // Detokenize retrieves card data from a token (internal only)
  rpc Detokenize(DetokenizeRequest) returns (DetokenizeResponse);
  
  // ValidateToken checks if a token is valid
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  

}

message CardMetadata {
  string brand = 1;        // "visa", "mastercard", etc.
  string type = 2;         // "credit", "debit", "prepaid"
  string last4 = 3;
  int32 exp_month = 4;
  int32 exp_year = 5;
  string fingerprint = 6;
}

// =========================================================================
// Detokenize (Internal Only)
// =========================================================================

message DetokenizeRequest {
  string token = 1;
  string merchant_id = 2;
  string transaction_id = 3;  // UUID
  string usage_type = 4;       // "payment", "verification", "recurring"
  int64 amount = 5;            // Amount in cents
  string currency = 6;
  string ip_address = 7;
  string user_agent = 8;
}

message DetokenizeResponse {
  string card_number = 1;
  string cardholder_name = 2;
  int32 exp_month = 3;
  int32 exp_year = 4;
  string card_brand = 5;
  string last4 = 6;
  string error = 7;
}

// =========================================================================
// ValidateToken
// =========================================================================

message ValidateTokenRequest {
  string token = 1;
  string merchant_id = 2;
}

message ValidateTokenResponse {
  bool valid = 1;
  CardMetadata card = 2;
  string status = 3;
  int32 usage_count = 4;
  bool is_single_use = 5;
  string error = 6;
}

