syntax = "proto3";

package transaction;

option go_package = "github.com/rhaloubi/payment-gateway/transaction-service/proto";

// TransactionService provides payment transaction processing
service TransactionService {

  rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse);
  
  rpc Capture(CaptureRequest) returns (CaptureResponse);
  

  rpc Void(VoidRequest) returns (VoidResponse);
  

  rpc Refund(RefundRequest) returns (RefundResponse);
  

  rpc GetTransaction(GetTransactionRequest) returns (TransactionResponse);
  

  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse);
}

// Authorize
message AuthorizeRequest {
  string merchant_id = 1;
  int64 amount = 2;              
  string currency = 3;           
  string card_token = 4;         
  string card_brand = 5;         
  string card_last4 = 6;
  int32 fraud_score = 7;
  string customer_email = 8;
  string description = 9;
  string ip_address = 10;
  string user_agent = 11;
}

message AuthorizeResponse {
  string transaction_id = 1;
  string status = 2;             
  bool approved = 3;
  string auth_code = 4;
  string response_code = 5;
  string response_message = 6;
  string decline_reason = 7;
  int64 amount = 8;
  int64 amount_mad = 9;          
  double exchange_rate = 10;
  int64 processing_fee = 11;
  int64 net_amount = 12;
  string error = 13;
}

// Capture

message CaptureRequest {
  string transaction_id = 1;
  int64 amount = 2;              // Can be partial
  string merchant_id = 3;
}

message CaptureResponse {
  string transaction_id = 1;
  string status = 2;             // captured
  int64 captured_amount = 3;
  string response_message = 4;
  string error = 5;
}

// Void

message VoidRequest {
  string transaction_id = 1;
  string merchant_id = 2;
  string reason = 3;
}

message VoidResponse {
  string transaction_id = 1;
  string status = 2;             
  string response_message = 3;
  string error = 4;
}

// Refund

message RefundRequest {
  string transaction_id = 1;
  int64 amount = 2;              // Can be partial
  string reason = 3;
  string merchant_id = 4;
}

message RefundResponse {
  string refund_id = 1;
  string transaction_id = 2;
  int64 refunded_amount = 3;
  int64 remaining_amount = 4;
  string response_message = 5;
  string error = 6;
}

// GetTransaction


message GetTransactionRequest {
  string transaction_id = 1;
  string merchant_id = 2;
}

message TransactionResponse {
  string id = 1;
  string merchant_id = 2;
  string type = 3;              
  string status = 4; 
  int64 amount = 5;
  string currency = 6;
  int64 amount_mad = 7;
  double exchange_rate = 8;
  string card_brand = 9;
  string card_last4 = 10;
  string auth_code = 11;
  int32 fraud_score = 12;
  int64 captured_amount = 13;
  int64 refunded_amount = 14;
  int64 processing_fee = 15;
  int64 net_amount = 16;
  string created_at = 17;
  string authorized_at = 18;
  string captured_at = 19;
  string error = 20;
}

// ListTransactions

message ListTransactionsRequest {
  string merchant_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  string status = 4;            
}

message ListTransactionsResponse {
  repeated TransactionResponse transactions = 1;
  int32 total = 2;
  string error = 3;
}